Contact Page and footer section issues fixed on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,7 @@ footer {
     text-decoration-thickness: 17%;
 }
 
+
 @media (min-width: 991.98px) and (max-width: 1199.98px) {
     .header_image {
         padding-top: 190px !important;
@@ -510,6 +511,9 @@ footer {
     .header_image {
         padding-left: 30px;
         padding-right: 30px;
+    }
+    .cell-number-footer{
+        font-size: 34px;
     }
 }
 
